# 3D_Challenge

./: .coderabbit.yaml  .env.example  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: ci-enhanced.yml  main.yml
.specify/memory/: constitution.md
agents/: judge.py  planner.py  worker.py
docs/: AUTH.md  DB_SCHEMA.md  ONBOARDING.md
docs/ADR/: 0001-authn-authz.md  0002-migrations.md
migrations/: 0001_init.sql
project_guidelines/: Project_Chimera_3Day_Challenge.txt  Project_Chimera_SRS.txt
research/: architecture_strategy.md  assessment_report.md  tooling_strategy.md
schemas/: contracts.py  postgres_schema.sql
scripts/: demo_claw_heartbeat.py  run_chimera.sh  visual_dashboard.py
skills/: README.md  base.py  claw_integration.py  skill_content_creator.py  skill_trend_fetcher.py  skill_wallet_manager.py
specs/: SOUL.md  _meta.md  functional.md  logic.md  openclaw_integration.md  technical.md
specs/001-core-swarm-architecture/: plan.md  spec.md  tasks.md
tests/: test_judge.py  test_openclaw_connectivity.py  test_planner.py  test_skills_interface.py  test_skills_tdd.py  test_trend_fetcher.py  test_worker.py
